# v2-rebalance-dashboard

./: .env_example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  15_min_auto_usd_combinations.csv  15_min_auto_usd_combinations2.csv  15_min_auto_usd_combinations3.csv  15_min_auto_usd_combinations4.csv  15_min_auto_usd_combinations5.csv  ALCHEMY_DEPRECATION_INVESTIGATION.md  CLAUDE.md  README.md  all_destination_summary_stats_df.csv  autolrt_destination_details.csv  autolrt_points_from_points_hooks.csv  autopool_top_level_charts.py  balETH dashboard MVP.ipynb  demo.env  destination_df.csv  error_log.txt  profile_report.txt  pyproject.toml  questions.txt  rebalance_plan_1745520200_0xa7569A44f348d3D70d8ad5889e50F78E33d80D35.json  swap_qutoes_with_prices.csv  update-prod-db copy 2.txt  update-prod-db copy.txt  update-prod-db copy_long.txt  update-prod-db.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  fetch_exit_liqudity_swap_quotes.yml  save_top_block_on_each_chain.yml  test_marketing_pages.yml  update_production_database.yml  update_production_database_slow.yml  verify_can_read_secrets.yml
.streamlit/: config.toml
data/: rebalance_plan_1720826447.json  rebalance_plan_1722287299.json  rebalance_plan_1722314226.json  rebalance_plan_1722315308.json  rebalance_plan_1722382197.json  rebalance_plan_1722382898.json  rebalance_plan_1722458709.json  rebalance_plan_1722460301.json  rebalance_plan_1722462846.json
mainnet_launch/: abi_working_space.ipynb  abis.py  all_holders_20251023_095204.csv  allocation_time.py  autopool_lp_stats.py  back_of_napkin_gas_costs.ipynb  constants.py  constants_with_base.py  cryptopunks-owners-2025-10-23.csv  destination_allocation_over_time.py  destinations copy.py  destinations.py  fee_high_water_mark.ipynb  fetch_destination_summary_stats.py  fetch_key_metrics_data.py  fetch_nav_per_share.py  fetch_rebalance_events.py  fetch_weighted_crm_data.py  get_events.py  get_s3_bucket.ipynb  get_state_by_block.py  key_metrics.py  lens_contract.py  main.py  main_with_cache_resource.py  make_sure_destinations_work_as_deleted.ipynb  our_lp_sizes.ipynb  our_upkeep_df_with_gas_costs.csv  page_functions.py  random_working_space.ipynb  rebalance_events.py  requirements.txt  setup_databases.py  startup.csv  template.py  test_pages.py  ui_config_setup.py  verify_all_functions_work.py  weighted_crm.py  working_space_2.ipynb
mainnet_launch/abis/: AutopoolETH_abi_with_AutopoolFees_abi.json  Tokemak_BalancerAuraDestinationVault_abi.json  __init__.py  abi_signature_from_abi_utils.py  abis.py  autopilot_router_abi.json  chainlink_keeper_registry_abi.json  destination_vault_registry_abi.json  generated_autopool_eth.json  generated_autopool_fees.json  lens_contract_abi.json  minimal_RewardsClaimed_event_abi.json  self_spot_eth_oracle_abi.json  solver_root_oracle_abi.json  strategy_abi.json  swapped_event_destination_debt_reporting.json  tokemak_autopool_router.json  tokemak_liquidation_row_abi.json  tokemak_stats_calculator_registry_abi.json  vault_abi.json
mainnet_launch/accounting/: a.ipynb  data_needed.ipynb  fee_data_for_profit_and_loss..py  fee_data_for_profit_and_loss.py  incentive_token_liqudiation_prices copy.py  incentive_token_liqudiation_prices.py  protocol_level_profit.py  time_make_tables.ipynb  working_incentive_token_db.ipynb
mainnet_launch/adhoc/: Monthly Performance Hypothetical no hack.csv  autoETH_rebalances_in_database.ipynb  autoETH_returns_performance_summary.csv  auto_usd_df.csv  base_usd_df.csv  check_auto_usd_price_return_buff.ipynb  check_eth_returns.ipynb  check_returns.ipynb  curve_usdt_usde_destination_states.csv  fetch_stoke_staking_durations.ipynb  how_long_was_someone_in_the_pool.ipynb  look_at_usdt_usde_curve_destination copy.ipynb  look_at_usdt_usde_curve_destination.ipynb  monthly_performance_data.ipynb  returns_math.py  (+2 more)
notebooks/: verify_stablecoin_apr_values.ipynb
profiles/: db_update_profile_20250716_082116.txt  db_update_profile_20250716_121223.txt  db_update_profile_20250717_130439.txt  db_update_profile_20250718_090815.txt  db_update_profile_20250718_100207.txt  db_update_profile_20250721_093555.txt  db_update_profile_20250721_122139.txt  db_update_profile_20250722_100610.txt
tests/: conftest.py  mock_test.py  speed_tests.py  test_api_keys.py  test_app_pages.py  test_arbitrum.py  test_autopool.py  test_buckets.py  test_exposure_data.py  test_import_from_constants.py  test_marketing_pages.py  test_pages.py  test_risk_metrics.py  test_risk_protocol_wide.py  test_slack_messages.py
v2_rebalance_dashboard/: BetweenDestinationRebalance.ipynb  Examine_state_of_destinations.ipynb  balETH dashboard MVP.html  balETH dashboard MVP.ipynb  constants.py  data_processing.py  fetch_asset_combination_over_time.py  fetch_destination_summary_stats.py  fetch_growth_of_a_dollar.py  fetch_growth_of_a_dollar_comparison.py  fetch_lp_composition_over_time.py  fetch_nav.py  fetch_nav_per_share.py  get_events.py  get_rebalance_events.ipynb  get_rebalance_events_summary.py  get_state_by_block.py  grab_data.ipynb  growth_of_a_dollar.ipynb  growth_of_an_eth_df.csv  make_plots_as_script.py  mock.ipynb  not_fast_get_destination_summary_stats.py  on_chain_call_to_charts_test.ipynb  rebalanceEvents.csv  see_if_multicall_works.py  solver_diagnostics.ipynb  solver_diagnostics.py  solver_rebalance_plans_plots.py  t.py  vaults.csv  vaults.parquet
(+578 files in other folders)
