[tool.poetry]
name = "mainnet_launch"
version = "0.1.0"
description = ""
authors = ["parkerburchett <parkerburchett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
web3 = "^5.28.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
plotly = "^5.23.0"
black = {extras = ["jupyter"], version = "^24.8.0"}
multicall = "0.8.2"
kaleido = "0.2.1"
fastparquet = "^2024.5.0"
python-dotenv = "^1.0.1"
streamlit = "1.38.0"
altair = "4.2.2"
boto3 = "^1.35.29"
psutil = "^6.0.0"
filelock = "^3.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-pages = "mainnet_launch.test_pages:main"